@@ -1,7 +1,7 @@
-// 1.20.1	2023-09-03T18:42:33.707704	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud)]
+// 1.20.1	2023-09-06T20:30:07.235673	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud)]
 d70fdb86a9e889383707aa03fd2b7c8f3faa74cc assets/l2hostility/blockstates/hostility_spawner.json
-ef7c1a6f41b3992156d8312bd5568f33957a857b assets/l2hostility/lang/en_ud.json
-9519f052c99d94f44664c53146bc5d6100997bea assets/l2hostility/lang/en_us.json
+97132ddb36b57ee924925a87b28aeb53bb661e3c assets/l2hostility/lang/en_ud.json
+f04a8803eee304db690334bc7042f381bc6f6043 assets/l2hostility/lang/en_us.json
 55c31fd97776999c18d0f2503db0ab0f48f978ca assets/l2hostility/models/block/hostility_spawner.json
 de5c51bce5800765c4480502c92b16feb891e135 assets/l2hostility/models/block/hostility_spawner_activated.json
 4fc08943953876aaddfa8b72bdf177b446377ce1 assets/l2hostility/models/block/hostility_spawner_clear.json
