@@ -10,6 +10,12 @@
   "item.l2hostility.trait_adder_wand": "puɐM ɹǝppⱯ ʇıɐɹ⟘",
   "itemGroup.l2library.hostility": "ʎʇıןıʇsoHᄅꞀ",
   "l2hostility.boss_event": "%s/%s :ssǝɹboɹԀ buıɹɐǝןƆ ʎʇıןıʇsoH",
+  "l2hostility.command.player.fail": "ʇɔǝɟɟǝ ou ɹo ʇǝbɹɐʇ ou sɐɥ puɐɯɯoƆ",
+  "l2hostility.command.player.get_base": "%s ןǝʌǝן ʎʇןnɔıɟɟıp ǝsɐq sɐɥ %s",
+  "l2hostility.command.player.get_dim": "suoısuǝɯıp %s pǝʇısıʌ sɐɥ %s",
+  "l2hostility.command.player.get_total": "%s ןǝʌǝן ʎʇןnɔıɟɟıp ןןɐɹǝʌo sɐɥ %s",
+  "l2hostility.command.player.success": "sɹǝʎɐןd %s uo suoıʇɔɐ pǝɯɹoɟɹǝԀ",
+  "l2hostility.command.player.trait_cap": "%s ʞuɐɹ sı pǝןןıʞ sɐɥ %s ʞuɐɹ xɐɯ ǝɥ⟘",
   "l2hostility.info.chunk_level": "%s :ʎʇןnɔıɟɟıp ǝsɐq ʞunɥƆ",
   "l2hostility.info.chunk_scale": "%s :ǝןɐɔs ʎʇןnɔıɟɟıp ʞunɥƆ",
   "l2hostility.info.clear": "pǝɹɐǝןɔ ʎʇןnɔıɟɟıp uoıʇɔǝS ʞunɥƆ",
