@@ -10,6 +10,12 @@
   "item.l2hostility.trait_adder_wand": "Trait Adder Wand",
   "itemGroup.l2library.hostility": "L2Hostility",
   "l2hostility.boss_event": "Hostility Clearing Progress: %s/%s",
+  "l2hostility.command.player.fail": "Command has no target or no effect",
+  "l2hostility.command.player.get_base": "%s has base difficulty level %s",
+  "l2hostility.command.player.get_dim": "%s has visited %s dimensions",
+  "l2hostility.command.player.get_total": "%s has overall difficulty level %s",
+  "l2hostility.command.player.success": "Performed actions on %s players",
+  "l2hostility.command.player.trait_cap": "The max rank %s has killed is rank %s",
   "l2hostility.info.chunk_level": "Chunk base difficulty: %s",
   "l2hostility.info.chunk_scale": "Chunk difficulty scale: %s",
   "l2hostility.info.clear": "Chunk Section difficulty cleared",
