@@ -1,0 +1,30 @@
+package dev.xkmc.l2hostility.content.command;
+
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.builder.LiteralArgumentBuilder;
+import com.mojang.brigadier.builder.RequiredArgumentBuilder;
+import dev.xkmc.l2hostility.init.L2Hostility;
+import net.minecraft.commands.CommandSourceStack;
+import net.minecraftforge.event.RegisterCommandsEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.common.Mod;
+
+@Mod.EventBusSubscriber(modid = L2Hostility.MODID, bus = Mod.EventBusSubscriber.Bus.FORGE)
+public class HostilityCommands {
+
+	@SubscribeEvent
+	public static void register(RegisterCommandsEvent event) {
+		event.getDispatcher().register(literal("hostility")
+				.then(LHPlayerCommands.build())
+		);
+	}
+
+	protected static LiteralArgumentBuilder<CommandSourceStack> literal(String str) {
+		return LiteralArgumentBuilder.literal(str);
+	}
+
+	protected static <T> RequiredArgumentBuilder<CommandSourceStack, T> argument(String name, ArgumentType<T> type) {
+		return RequiredArgumentBuilder.argument(name, type);
+	}
+
+}
