@@ -43,6 +43,12 @@
   "config.jade.plugin_l2hostility.mob": "莱特兰·恶意",
   "patchouli.l2hostility.landing": "了解难度机制和怪物词条，以更好地应对它们",
   "patchouli.l2hostility.title": "莱特兰恶意教程",
+  "l2hostility.command.player.fail": "指令无目标或者无效",
+  "l2hostility.command.player.get_base": "%s的基础难度等级位Lv.%s",
+  "l2hostility.command.player.get_dim": "%s造访过%s个维度",
+  "l2hostility.command.player.get_total": "%s综合难度等级为Lv.%s",
+  "l2hostility.command.player.success": "指令已对%s个玩家起效",
+  "l2hostility.command.player.trait_cap": "%s击杀的最高阶级词条为阶级%s",
   "l2hostility.patchouli.title": "莱特兰·恶意-教程与词条列表",
   "l2hostility.patchouli.landing": "这个模组提升了怪物数值，并添加了各种能力",
   "l2hostility.boss_event": "恶意清除进度：%s/%s",
